# trilingua-bridge

./: .editorconfig  .env  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ai_helper.py  app.py  audio_helper.py  db_helper.py  dev-requirements.txt  error_monitor.py  pyproject.toml  recommendation_engine.py  requirement.txt  requirements.txt  run.bat  run.py  ui_helper.py
.github/workflows/: ci.yml
.streamlit/: _shot.py  config.toml  secrets.toml.example
docs/: architecture.md  demo-script.md
docs/screenshots/: gen_placeholders.py
helpers/: ai_helper.py  db.py
modules/: pages.py  styles.py
pwa/: gen_icons.py  manifest.json  sw.js
tests/: test_basic.py  test_db.py  test_i18n.py  test_recommendations.py
